[package]
name = "reachability-toolkit"
version = "0.1.0"
edition = "2021"
authors = ["github.com/fossas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0.26", features = ["derive", "cargo"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
serde_yaml = "*"
anyhow = "1.0"
regex = "1"
chrono = "0.4"
indoc = "2"
lazy_static="*"

[dev-dependencies]
test-case = "*"
