[package]
name = "reachability-toolkit"
version = "0.0.1"
edition = "2021"
authors = ["github.com/fossas"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0.26", features = ["derive", "cargo"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
serde_yaml = "0.9.27"
anyhow = "1.0"
regex = "1"
chrono = "0.4"
indoc = "2"
locator = { git = "https://github.com/fossas/locator-rs.git", branch="main"}
non-empty-string = { version="0.2.4", features= ["serde"] }
tap = "1.0.1"
typed-builder = "0.18.0"

[dev-dependencies]
test-case = "3.3.1"
